<resources>
	<string name="app_name">AComics</string>

	<string name="navbar_feed_item">Лента</string>
	<string name="navbar_favorites_item">Избранное</string>
	<string name="navbar_info_item">Информация</string>

	<string name="catalog_menu_search_title">Поиск</string>
	<string name="catalog_menu_search_hint">Название комикса</string>
	<string name="catalog_item_rating">Рейтинг:</string>
	<string name="catalog_item_no_updates">Нет выпусков</string>
	<string name="catalog_item_no_subs">Нет подписчиков</string>
	<string name="catalog_item_menu">&#8942;</string>
	<string name="catalog_item_menu_report">Пожаловаться</string>

	<string name="catalog_filter_title">Настройки выдачи</string>
	<string name="catalog_no_data_retry_loading_text">ПОВТОРИТЬ</string>
	<string name="catalog_no_data">Я ничего не нашел, сорян\n¯\\_(ツ)_/¯</string>

	<string name="catalog_sort_dialog_title">Сортировать по</string>
	<string name="catalog_sort_dialog_sort_by_date">дате обновления</string>
	<string name="catalog_sort_dialog_sort_by_subs">количеству подписчиков</string>
	<string name="catalog_sort_dialog_sort_by_issues">количеству выпусков</string>
	<string name="catalog_sort_dialog_sort_by_alphabet">алфавиту</string>

	<string name="catalog_age_filter_dialog_title">Возрастной рейтинг</string>
	<string name="catalog_age_filter_dialog_rating_all">Выбрать все</string>
	<string name="catalog_age_filter_dialog_rating_undef">Рейтинг не установлен</string>
	<string name="catalog_age_filter_dialog_rating_g">0+</string>
	<string name="catalog_age_filter_dialog_rating_pg">6+</string>
	<string name="catalog_age_filter_dialog_rating_pg_13">12+</string>

	<string name="catalog_filter_type_dialog_title">Тип комикса</string>
	<string name="catalog_filter_type_dialog_issues_config_title">Выпусков не меньше: %d</string>
	<string name="catalog_filter_type_dialog_original">Оригинальный</string>
	<string name="catalog_filter_type_dialog_translated">Перевод</string>
	<string name="catalog_filter_type_dialog_all">Все</string>

	<string name="favorites_no_favorites">В избранном пусто и одиноко…</string>
	<string name="favorites_no_pages_to_read">Нечего читать =_=</string>
	<string name="favorites_no_new_issues">Не читано</string>
	<string name="favorites_no_data">Что-то пошло совсем не так о_о</string>

	<string name="info_about_application">О приложении</string>
	<string name="info_about_acomics">Правила портала</string>
	<string name="info_terms_and_conditions">Term and Conditions</string>
	<string name="info_privacy_policy">Privacy Policy</string>

	<string name="comics_index">%s из %s</string>
	<string name="comics_toolbar_loading">Загрузка</string>
	<string name="comics_menu_bookmark_item">В закладки</string>
	<string name="comics_new_favorite_added_message">Добавлено в избранное</string>

	<plurals name="catalog_item_subscribers">
		<item quantity="zero">Нет подписчиков</item>
		<item quantity="one">%d подписчик</item>
		<item quantity="few">%d подписчика</item>
		<item quantity="many">%d подписчиков</item>
		<item quantity="other">%d подписчиков</item>
	</plurals>

	<plurals name="catalog_item_hours">
		<item quantity="zero">часов назад</item>
		<item quantity="one">%d час назад</item>
		<item quantity="few">%d часа назад</item>
		<item quantity="many">%d часов назад</item>
		<item quantity="other">%d часов назад</item>
	</plurals>

	<plurals name="catalog_item_issues">
		<item quantity="zero">нет выпусков</item>
		<item quantity="one">%d выпуск</item>
		<item quantity="few">%d выпуска</item>
		<item quantity="many">%d выпусков</item>
		<item quantity="other">%d выпусков</item>
	</plurals>

	<plurals name="read_issues">
		<item quantity="zero">Не читано</item>
		<item quantity="one">Прочитанно: %d выпуск</item>
		<item quantity="few">Прочитанно: %d выпуска</item>
		<item quantity="many">Прочитанно: %d выпусков</item>
		<item quantity="other">Прочитанно: %d выпусков</item>
	</plurals>
</resources>
